Do not advise to use Ant to help with run configuration.